# optuna-fast-fanova

./: .gitignore  MANIFEST.in  README.md  benchmark.py  dump_cprofile_stats.py  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-python-dists.yml  build_wheels.yml  pypi-publish.yml  python-tests.yml
fast_fanova/: __init__.py  _evaluator.py  _fanova.pyx
optuna_fast_fanova/: __init__.py  _evaluator.py  _fanova.pyx
tests/: test_fanova.py
tools/: benchmark.py  build_wheel.sh  debug_fanova.py  dump_cprofile_stats.py  example.py
